Skills button mobile fix

--- a/src/components/SkillsCard/skillscard.css
+++ b/src/components/SkillsCard/skillscard.css
@@ -8,7 +8,7 @@
 }
 .skillsSectionHeader{
     font-size: 15px;
-    border-bottom: 1px solid #d0d0d0;
+    border-bottom: 1px solid #a2a2a2;
      padding-bottom: 3px;
     margin-top: 15px;
 }
